--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # build output
 dist/
 .env
+private_pdfs/
 
 # generated types
 .astro/
@@ -23,3 +24,4 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+.vercel
