--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^8.3.4",
     "@astrojs/preact": "^4.1.3",
-    "astro": "^4.15.12",
+    "@astrojs/vercel": "^9.0.1",
+    "astro": "^5.15.9",
     "astro-relative-links": "^0.4.2",
     "dotenv": "^17.2.3",
     "jose": "^6.1.2",
