--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/preact": "^4.1.3",
     "@astrojs/vercel": "^9.0.1",
     "astro": "^5.15.9",
