--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/preact": "^4.1.3",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/vercel": "^9.0.1",
     "astro": "^5.15.9",
     "astro-relative-links": "^0.4.2",
